# daence

./: .gitignore  COPYING  Makefile  README  README.md  adv.py  beardaence.c  beardaence.h  chachadaence.c  chachadaence.h  daence.bib  daence.c  daence.h  daence.tex  daence.tikz  deuce.tikz  diagdaence.tex  diagdeuce.tex  diagdice.tex  diagpoly13052.tex  dice.tikz  kat_chachadaence.c  kat_chachadaence.exp  kat_salsa20daence.c  kat_salsa20daence.exp  palette.def  poly13052.tikz  salsa20daence.c  salsa20daence.h  t_beardaence.c  t_chachadaence.c  t_salsa20daence.c  t_tweetdaence.c  testvector.c  testvector.exp  tweetdaence.c  tweetdaence.h
crypto_aead/salsa20daence/: checksumbig  checksumsmall  used
crypto_aead/salsa20daence/ref/: api.h  encrypt.c  salsa20daence.c  salsa20daence.h
crypto_auth/salsa20daence/: checksumbig  checksumsmall  designers
crypto_auth/salsa20daence/ref/: api.h  verify.c
go/: README.md  go.mod
go/chachadaence/: chachadaence.go  chachadaence_test.go
go/salsa20daence/: salsa20daence.go  salsa20daence_test.go
js/: .gitignore  README.md  demo.html  package-lock.json  package.json  salsa20daence.js  test.js
python/: README.md  chachadaence.py
rust/: Cargo.toml  README.md
rust/examples/: main.rs
rust/src/: chacha.rs  lib.rs  salsa20.rs
